fixed images not showing error

--- a/components/welcome-page/Hero.module.css
+++ b/components/welcome-page/Hero.module.css
@@ -2,19 +2,31 @@
 .buttom {
   max-width: 100%;
   height: 53.819rem;
+
+  overflow: hidden;
 }
 
 .top {
   padding: 11.555rem 0 0 10.8rem;
   border-radius: 4.2rem 4.2rem 0 0;
 
-  background-image: url("../../public/project-files/HeroImagelg.png");
-
   background-position: center;
-  /* background-repeat: no-repeat;
-  image-resolution: 100%; */
+  object-fit: contain;
+  background-repeat: no-repeat;
+  image-resolution: 100%;
 
   color: #fff;
+
+  position: relative;
+}
+
+.top-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 53.819rem;
 }
 
 .top p {
